--- a/chromeApp/manifest.json
+++ b/chromeApp/manifest.json
@@ -5,11 +5,11 @@
             "manifest_version": 2,
             "app": {
                 "background": {
-                          "scripts": ["background.js"]
+                          "scripts": ["background.js", "file.js"]
                               
                 }
-                  
+          
             },
-              "icons": { "16": "calculator-16.png", "128": "calculator-128.png"  }
+              "icons": { "16": "calculator-16.png", "128": "timer.png"}
 
 }
